--- a/back_end/package.json
+++ b/back_end/package.json
@@ -1,32 +1,33 @@
 {
-    "name": "back_end",
-    "version": "1.0.0",
-    "main": "src/server.js",
-    "scripts": {
-        "start": "nodemon src/server.js",
-        "lan": "cross-env NODE_ENV=lan nodemon src/server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "bcryptjs": "^2.4.3",
-        "cloudinary": "^2.4.0",
-        "cloudinary-build-url": "^0.2.4",
-        "cookie-parser": "^1.4.6",
-        "cors": "^2.8.5",
-        "dotenv": "^16.4.5",
-        "express": "^4.19.2",
-        "jsonwebtoken": "^9.0.2",
-        "mongoose": "^8.5.3",
-        "multer": "^1.4.5-lts.1",
-        "nodemon": "^3.1.4",
-        "paypal-rest-sdk": "^1.8.1",
-        "slugify": "^1.6.6"
-    },
-    "devDependencies": {
-        "cross-env": "^7.0.3",
-        "prettier": "^3.5.3"
-    }
+  "name": "back_end",
+  "version": "1.0.0",
+  "main": "src/server.js",
+  "scripts": {
+    "start": "nodemon src/server.js",
+    "lan": "cross-env NODE_ENV=lan nodemon src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prettier:fix": "prettier --write ."
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.4.0",
+    "cloudinary-build-url": "^0.2.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.3",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.4",
+    "paypal-rest-sdk": "^1.8.1",
+    "slugify": "^1.6.6"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "prettier": "^3.5.3"
+  }
 }
